// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tic-Tac-Toe/Board O smoke-test 1`] = `
<div class="status">
  Winner: O
</div>
<div class="board-row">
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
</div>
<div class="board-row">
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
</div>
<div class="board-row">
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
</div>
`;

exports[`Tic-Tac-Toe/Board OIsNext smoke-test 1`] = `
<div class="status">
  Next player: O
</div>
<div class="board-row">
  <button class="square">
  </button>
  <button class="square">
  </button>
  <button class="square">
  </button>
</div>
<div class="board-row">
  <button class="square">
  </button>
  <button class="square">
  </button>
  <button class="square">
  </button>
</div>
<div class="board-row">
  <button class="square">
  </button>
  <button class="square">
  </button>
  <button class="square">
  </button>
</div>
`;

exports[`Tic-Tac-Toe/Board OWin smoke-test 1`] = `
<div class="status">
  Winner: O
</div>
<div class="board-row">
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
</div>
<div class="board-row">
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
  <button class="square">
  </button>
</div>
<div class="board-row">
  <button class="square">
  </button>
  <button class="square">
  </button>
  <button class="square">
  </button>
</div>
`;

exports[`Tic-Tac-Toe/Board Triangle smoke-test 1`] = `
<div class="status">
  Winner: △
</div>
<div class="board-row">
  <button class="square">
    △
  </button>
  <button class="square">
    △
  </button>
  <button class="square">
    △
  </button>
</div>
<div class="board-row">
  <button class="square">
    △
  </button>
  <button class="square">
    △
  </button>
  <button class="square">
    △
  </button>
</div>
<div class="board-row">
  <button class="square">
    △
  </button>
  <button class="square">
    △
  </button>
  <button class="square">
    △
  </button>
</div>
`;

exports[`Tic-Tac-Toe/Board X smoke-test 1`] = `
<div class="status">
  Winner: X
</div>
<div class="board-row">
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
</div>
<div class="board-row">
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
</div>
<div class="board-row">
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
</div>
`;

exports[`Tic-Tac-Toe/Board XIsNext smoke-test 1`] = `
<div class="status">
  Next player: X
</div>
<div class="board-row">
  <button class="square">
  </button>
  <button class="square">
  </button>
  <button class="square">
  </button>
</div>
<div class="board-row">
  <button class="square">
  </button>
  <button class="square">
  </button>
  <button class="square">
  </button>
</div>
<div class="board-row">
  <button class="square">
  </button>
  <button class="square">
  </button>
  <button class="square">
  </button>
</div>
`;

exports[`Tic-Tac-Toe/Board XWin smoke-test 1`] = `
<div class="status">
  Winner: X
</div>
<div class="board-row">
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
  <button class="square">
    X
  </button>
</div>
<div class="board-row">
  <button class="square">
    O
  </button>
  <button class="square">
    O
  </button>
  <button class="square">
  </button>
</div>
<div class="board-row">
  <button class="square">
  </button>
  <button class="square">
  </button>
  <button class="square">
  </button>
</div>
`;
